--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   background-color: var(--main-color);
   color: var(--text-color);
   font-family: "Roboto", sans-serif;
-  margin-top: 10px;
+  margin-top: 0;
   padding: 0;
 }
 
@@ -35,6 +35,8 @@ body {
   color: var(--text-color);
   z-index: 2;
   padding: 8px 15px;
+
+
 }
 
 .navbar-nav .nav-item {
@@ -64,4 +66,54 @@ body {
 
 .container-fluid {
   padding: 0 15px;
+}
+
+
+.hero-section {
+    background: linear-gradient(to right, var(--main-color), #1b1e34); 
+    padding: 35px;
+    color: var(--text-color);
+    height: auto;
+}
+
+.hero-section h2 {
+    font-size: 2.5rem; 
+    font-weight: 700;
+    letter-spacing: 2px;
+    line-height: 50px;
+}
+
+.hero-section .highlight {
+    color: var(--highlight-color);
+}
+
+.hero-section p {
+    font-size: 1.2rem; 
+    margin-bottom: 20px;
+}
+
+.hero-section .btn {
+    padding: 10px 20px;
+    font-size: 1rem;
+}
+
+.hero-section .btn-light {
+    margin-right: 10px;
+}
+
+.hero-section img {
+    max-width: 100%;
+    height: auto;
+}
+@keyframes upAndDown {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+.hero-section img {
+    animation: upAndDown 3s ease-in-out infinite;
 }
