--- a/css/style.css
+++ b/css/style.css
@@ -12,22 +12,28 @@ body {
   padding: 0;
 }
 
-.navbar {
+.navbar,
+.card {
   background-color: var(--main-color);
   position: relative;
   z-index: 1;
 }
 
-.navbar::before {
+.navbar::before,
+.card::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(141, 137, 137, 0.2);
   z-index: -1;
   border-radius: 5px;
+}
+
+.card {
+  color: var(--text-color);
 }
 
 .nav-link,
@@ -172,4 +178,18 @@ body {
 .empower-text {
   margin-top: 10px;
   text-align: center;
+}
+
+.read-more-link {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.read-more-link:hover {
+  text-decoration: none;
+}
+
+.read-more-link i {
+  margin-left: 5px;
+  color: var(--text-color);
 }
