--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -128,7 +128,8 @@
   
   text-align: center;
   height: 300px;
-  background: linear-gradient(to right, var(--main-color), #1b1e34);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 3px;
   
   }
 
@@ -141,4 +142,7 @@
     color: var(--text-color);
     line-height: 1.5;
     margin-bottom: 20px;
+  }
+  .about-us-card i{
+    font-size: 1.5rem;
   }
