--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,10 @@ h1 {
   background-color: rgba(126, 125, 125, 0.2);
 }
 
+.box-container{
+  background-color:rgba(126, 125, 125, 0.2);
+}
+
 .about-us-card h6 {
   line-height: 25px;
 }
@@ -243,6 +247,11 @@ h1 {
 .card {
   margin-bottom: 1rem;
   min-height: 450px;
+}
+
+.about-section-mission{
+  line-height: 30px;
+  /* text-align: justify; */
 }
 
 .contact-details p {
@@ -315,7 +324,6 @@ h1 {
 
 
 /* section-transitions.css */
-
 .animate-section {
   opacity: 0;
   transform: translateY(30px);
@@ -327,19 +335,13 @@ h1 {
   transform: translateY(0);
 }
 
-.animate-section p:first-child {
-  font-size: 1.2rem;
-  color: #f1d68f;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-  transition: color 0.3s ease;
-}
-
 .animate-section h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
   position: relative;
   display: inline-block;
+  text-align: center; /* Ensure the text stays centered */
+  width: 100%; /* Take up the full width of the container */
 }
 
 .animate-section h1::after {
@@ -358,9 +360,25 @@ h1 {
   transition-delay: 0.5s;
 }
 
+.animate-section p:first-child {
+  font-size: 1.2rem;
+  color: #f1d68f;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  transition: color 0.3s ease;
+}
+
 .animate-section p:last-child {
   font-size: 1rem;
   color: #6c757d;
+  transition: color 0.3s ease;
+}
+
+
+.dark-text {
+  font-size: 1rem;
+  color: #6c757d;
+  line-height: 1.7rem;
   transition: color 0.3s ease;
 }
 
@@ -425,6 +443,9 @@ h1 {
 }
 
 
+.small-text{
+  color: var(--second-color);
+}
 
 /* Add this to your existing CSS file or create a new one */
 /* General animation classes */
