--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,31 @@ body {
   padding: 0;
 }
 
-.navbar,
+
 .card {
   background-color: var(--main-color);
   position: relative;
   z-index: 1;
 }
+.navbar {
+  background-color: var(--main-color);
+  position: relative;
+  z-index: 1;
+  transition: background-color 0.4s ease-in-out;
+}
 
-.navbar::before,
+
+.navbar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(141, 137, 137, 0.2);
+  z-index: -1;
+  border-radius: 5px;
+}
 .card::before {
   content: "";
   position: absolute;
@@ -37,17 +54,69 @@ body {
   color: var(--text-color);
 }
 
-.nav-link,
-.nav-link:hover {
+.nav-link {
   color: var(--text-color);
   z-index: 2;
   padding: 8px 15px;
+  position: relative;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: color 0.4s, transform 0.4s;
 }
 
+.nav-link:hover {
+  color: var(--hover-color);
+  transform: translateY(-5px);
+}
+
+.nav-link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: var(--second-color);
+  transition: width 0.4s;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+}
+
+
+.navbar-toggler {
+  border: none;
+}
+
+
+
+.navbar-toggler:hover .navbar-toggler-icon {
+  transform: rotate(90deg);
+}
+
+/* Navbar brand logo */
+.navbar-brand img {
+  max-height: 50px;
+  padding: 5px;
+  vertical-align: middle;
+  transition: transform 0.4s;
+}
+
+.navbar-brand img:hover {
+  transform: scale(1.1);
+}
+
+/* Navbar nav items */
 .navbar-nav .nav-item {
   margin-right: 20px;
+  transition: transform 0.4s;
 }
 
+.navbar-nav .nav-item:hover {
+  transform: translateY(-3px);
+}
 .btn-outline-light {
   border-color: var(--text-color);
   color: var(--text-color);
@@ -58,11 +127,6 @@ body {
   border-radius: 0;
 }
 
-.navbar-brand img {
-  max-height: 50px;
-  padding: 5px;
-  vertical-align: middle;
-}
 
 .btn-outline-light:hover {
   background-color: var(--text-color);
@@ -596,7 +660,37 @@ h1 {
   text-decoration: none;
 }
 
-.footer-link:hover {
-  color: #cccccc; /* Optional: change color on hover */
-  text-decoration: underline; /* Optional: add underline on hover */
+
+
+
+.footer-link-custom {
+  color: var(--text-color);
+  position: relative;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: color 0.4s, transform 0.4s;
+  display: inline-block;
+  padding: 8px 15px;
+  text-decoration: none;
+}
+
+.footer-link-custom:hover {
+  color: var(--hover-color);
+  transform: translateY(-5px);
+}
+
+.footer-link-custom::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: var(--second-color);
+  transition: width 0.4s;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.footer-link-custom:hover::after {
+  width: 100%;
 }
